Fixed bugs regarding dynamic header text color and experiment with blurred logo and nav background

--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -22,3 +22,7 @@ code {
 .page {
   padding: rem-calc(80 0);
 }
+
+.visually-hidden {
+  @include visually-hidden;
+}
