--- a/src/components/header/scss/_header.scss
+++ b/src/components/header/scss/_header.scss
@@ -21,12 +21,30 @@
       left: 0;
       height: var(--header-height);
       color: var(--header-text-color);
+
+      .header__logo,
+      nav {
+        position: relative;
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          right: rem-calc(-10);
+          bottom: 0;
+          left: rem-calc(-10);
+          background-color: var(--header-bg-color);
+          backdrop-filter: blur(20px);
+          border-radius: rem-calc(10);
+          z-index: -1;
+        }
+      }
     }
   }
 
   &-top-slice {
     top: 0;
-    height: var(--header-slice-height);
+    height: var(--header-slice-height, 100%);
 
     &__content {
       top: 0;
@@ -35,7 +53,7 @@
 
   &-bottom-slice {
     bottom: 0;
-    height: var(--header-slice-height);
+    height: var(--header-slice-height, 0%);
 
     &__content {
       bottom: 0;
@@ -43,7 +61,11 @@
   }
 
   &__content {
-    color: transparent;
+    color: white;
+
+    &--initialized {
+      color: transparent;
+    }
   }
 
   &__inner {
@@ -51,6 +73,12 @@
     align-items: center;
     padding: rem-calc(24);
     font-size: rem-calc(20);
+  }
+
+  &__logo {
+    display: block;
+    color: inherit;
+    padding: rem-calc(5 0);
   }
 
   nav {
